generate empty io